# cs393r_starter

./: .gitignore  CMakeLists.txt  README.md  calibration_readings.csv  manifest.xml
bag/: 2020-04-01-17-14-01.bag
config/: particle_filter.lua
launch/: legs.launch
src/: eigen_tutorial.cc  pq_tutorial.cc
src/navigation/: .navigation.cc.swp  global_planner.cc  global_planner.h  human.cc  human.h  latency_compensator.cc  latency_compensator.h  local_planner.cc  local_planner.h  measureLatency.cpp  nav_types.h  navigation.cc  navigation.h  navigation_main.cc  pq_tutorial.cc  scenarios.h  simple_queue.h
src/particle_filter/: .particle_filter.cc.swn  .particle_filter.cc.swo  .particle_filter.cc.swp  particle_filter.cc  particle_filter.h  particle_filter_main.cc
src/shared/: CMakeLists.txt
src/shared/math/: line2d.h  math_util.h
src/shared/tests/math/: line2d_tests.cc
src/slam/: CellGrid.cpp  CellGrid.h  slam.cc  slam.h  slam_main.cc
src/tf/: odometry_broadcaster.cpp
src/vector_map/: vector_map.cc
src/visualization/: visualization.cc  visualization.h
